--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bootstrap": "~3.3.4",
     "jquery": "~2.1.1",
-    "angular": "~1.3.15"
+    "angular": "~1.3.15",
+    "font-awesome": "~4.3.0"
   }
 }
